[package]
name = "refpool"
version = "0.2.3"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Efficient memory pool with reference counting"
repository = "https://github.com/bodil/refpool"
documentation = "http://docs.rs/refpool"
readme = "./README.md"
categories = ["memory-management"]
keywords = ["rc", "memory-pool"]
exclude = ["release.toml", "proptest-regressions/**"]

[package.metadata.docs.rs]
all-features = true

[features]
sync = ["crossbeam-queue"]

[dependencies]
crossbeam-queue = { version = "0.2.0", optional = true }
