[package]
name = "refpool"
version = "0.4.3"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Efficient memory pool with reference counting"
repository = "https://github.com/bodil/refpool"
documentation = "http://docs.rs/refpool"
readme = "./README.md"
categories = ["memory-management"]
keywords = ["rc", "memory-pool"]
exclude = ["release.toml", "proptest-regressions/**"]

[features]
default = []
default_impl = []

[[bench]]
name = "pool"
harness = false

[dependencies]
static_assertions = "1.1.0"

[dev-dependencies]
criterion = "0.3.0"
